--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   go_router: ^8.0.5
   flutter_riverpod: ^2.3.6
   google_fonts: ^5.1.0
+  auto_size_text: ^3.0.0
+  flutter_staggered_grid_view: ^0.6.2
 
 dev_dependencies:
   flutter_test:
