--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,11 +35,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.5
-  go_router: ^8.0.5
+  go_router: ^8.1.0
   flutter_riverpod: ^2.3.6
   google_fonts: ^5.1.0
   auto_size_text: ^3.0.0
   flutter_staggered_grid_view: ^0.6.2
+  auto_animated: ^3.1.0
+
 
 dev_dependencies:
   flutter_test:
